<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".View.User.HomeUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_home_user_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_home_user_toolbar"
            style="@style/Base.ThemeOverlay.AppCompat.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/home_page"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/activity_home_user_determinateBar_moreThan_20"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat"
        android:indeterminateDuration="50"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_home_user_app_bar_layout"
        tools:targetApi="lollipop" />

    <ProgressBar
        android:id="@+id/activity_home_user_determinateBar_lessThan_21"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:theme="@style/CircularProgress"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_home_user_app_bar_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_home_user_determinateBar_moreThan_20">


        <EditText
            android:id="@+id/activity_home_user_machine_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/machine_code1"
            android:padding="12dp"
            android:inputType="text"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/customer_background"/>

        <EditText
            android:id="@+id/activity_home_user_machine_code_edit_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/machine_code2"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_user_machine_code_edit_text"
            android:background="@drawable/customer_background"/>

        <EditText
            android:id="@+id/activity_home_user_machine_code_edit_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/machine_code3"
            android:padding="12dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_user_machine_code_edit_text2"
            android:background="@drawable/customer_background"/>

        <EditText
            android:id="@+id/activity_home_user_machine_code_edit_text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/machine_code4"
            android:padding="12dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_home_user_machine_code_edit_text3"
            android:background="@drawable/customer_background"/>


        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--            android:id="@+id/activity_home_user_machine_code_fab"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:src="@drawable/ic_add_a_photo_black_24dp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@id/activity_home_user_machine_code_input_layout"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            />-->



            <EditText
                android:id="@+id/activity_home_user_client_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_home_user_machine_code_edit_text4"
                android:background="@drawable/customer_background"
                android:hint="@string/client_name"
                android:inputType="text" />


            <EditText
                android:id="@+id/activity_home_user_client_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:gravity="center"
                android:background="@drawable/customer_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_home_user_client_name_edit_text"
                android:hint="@string/client_phone"
                android:inputType="phone" />

        <EditText
            android:id="@+id/activity_home_user_city_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:gravity="center"
            android:background="@drawable/customer_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_home_user_client_phone_edit_text"
            android:hint="@string/city"
            android:inputType="text" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_home_user_add_location_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_my_location_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_home_user_city_edit_text" />

        <EditText
            android:id="@+id/activity_home_user_add_location_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:hint="@string/add_location"
            android:maxLines="1"
            android:textDirection="ltr"
            android:textSize="14sp"
            android:padding="8dp"
            android:background="@drawable/customer_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_home_user_add_location_fab"
            app:layout_constraintTop_toBottomOf="@id/activity_home_user_city_edit_text" />


        <Button
            android:id="@+id/activity_home_user_add_machine_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_machine_button"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_home_user_add_location_fab" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>