<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Admin.HomeAdminActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textDirection="rtl">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/activity_home_admin_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/activity_home_admin_toolbar"
                style="@style/HomeAdminToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layoutDirection="rtl"
                app:subtitleTextColor="@color/white"
                app:title="@string/home_page"
                app:titleTextColor="@color/white">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ProgressBar
            android:id="@+id/activity_home_admin_determinateBar_moreThan_20"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:indeterminateDuration="50"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_home_admin_app_bar_layout"
            tools:targetApi="lollipop" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_home_admin_determinateBar_moreThan_20">

            <!--<TextView-->
            <!--android:id="@+id/activity_home_admin_code_text_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/representative_code"-->
            <!--android:textSize="17sp"-->
            <!--android:textStyle="bold"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent" />-->

            <!--<ImageView-->
            <!--android:id="@+id/activity_home_admin_generated_code_image_view"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="200dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:contentDescription="@string/representative_code"-->
            <!--android:src="@color/grey_light"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@id/activity_home_admin_code_text_view" />-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_home_admin_user_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/activity_home_admin_user_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_home_admin_user_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_home_admin_user_name_input_layout">

                <EditText
                    android:id="@+id/activity_home_admin_user_phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_user_phone"
                    android:inputType="phone|numberPassword"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/activity_home_admin_add_user_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="onAddUserClickListener"
                android:text="@string/add_user"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_home_admin_user_email_input_layout" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>