<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_login_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="تسجيل الدخول"
            app:titleTextColor="@color/white"
            style="@style/Base.ThemeOverlay.AppCompat.ActionBar">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/activity_login_determinateBar_moreThan_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat"
        android:indeterminateDuration="50"
        app:layout_constraintTop_toBottomOf="@id/activity_login_app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        tools:targetApi="lollipop"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/activity_login_determinateBar_lessThan_21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CircularProgress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:indeterminate="true"
        app:layout_constraintTop_toBottomOf="@id/activity_login_app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/activity_login_determinateBar_moreThan_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_email_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layoutDirection="rtl"
            android:textDirection="ltr"
            app:layout_constraintBottom_toTopOf="@+id/activity_login_code_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_EmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_code_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layoutDirection="rtl"
            android:textDirection="ltr"
            app:passwordToggleEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/activity_login_loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_CodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="ltr"
                android:hint="@string/enter_your_code"
                android:inputType="numberPassword"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_login_loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/activity_login_code_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>