<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".Admin.SearchActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/activity_search_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="32dp"
            android:layoutDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/activity_search_toolbar"
                style="@style/HomeAdminToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layoutDirection="rtl"
                app:subtitleTextColor="@color/white"
                app:title="@string/search_result"
                app:titleTextColor="@color/white" />

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_search_users_constraints_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_search_app_bar_layout" >

            <View
                android:id="@+id/activity_search_line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_shadow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/activity_search_users_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:paddingBottom="8dp"
                android:paddingEnd="0dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/representatives"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_search_line1" />

            <View
                android:id="@+id/activity_search_line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_shadow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_search_users_textView" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/activity_search_users_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_search_line2" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_search_users_constraints_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_search_users_constraints_layout1"
            android:visibility="gone">

            <View
                android:id="@+id/activity_search_line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_shadow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/activity_search_machines_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:paddingBottom="8dp"
                android:paddingEnd="0dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/machines"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_search_line3" />

            <View
                android:id="@+id/activity_search_line4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_shadow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_search_machines_textView" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/activity_search_machines_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_search_line4" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>